<!--
  Copyright 2016 Google Inc.\n\n  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at\n\n      http://www.apache.org/licenses/LICENSE-2.0\n\n  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="app_name">Material Me!</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="sport_s_image_content_description">Sport\'s image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend, lectus nec efficitur laoreet, enim magna lobortis eros, malesuada vulputate dui sem quis odio. Aliquam dapibus metus ac laoreet blandit. Fusce iaculis finibus augue nec aliquam. Mauris porta mauris magna, ut dictum lectus tincidunt faucibus. Quisque magna sapien, ornare eget lacus quis, iaculis sodales lectus. Phasellus ac ligula pulvinar, condimentum elit et, imperdiet libero. Morbi luctus consectetur odio porttitor tincidunt. Praesent nisi justo, venenatis non malesuada non, aliquam sit amet enim. Integer quis tincidunt erat, sit amet iaculis orci. Donec eu orci eros. Nullam ac nisl interdum, pharetra urna vitae, elementum urna. Integer semper diam vulputate arcu aliquam, et pulvinar sem sollicitudin. Nam condimentum blandit nibh at consequat.</string>    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>

    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string-array name="sport_details">
        <item>Six players and both managers have been given bans for their roles in a five-minute mass brawl during Cincinnati Reds loss to Pittsburgh Pirates.\n\n            Reds pitcher Amir Garrett, who started Tuesdays brawl, received an eight-game suspension from Major League Baseball.\n\n            But Pirates pitcher Keone Kela was handed the longest ban of 10 games.\n\n            That was for intentionally throwing in the area of the head of Derek Dietrich in the seventh inning and for his role in the brawl in the ninth.\n\n            Other players who received bans for actions leading up to and during the fight were Pirates infielder Jose Osuna (five games), Reds pitcher Jared Hughes, Pirates pitcher Kyle Crick and Yasiel Puig, who has since joined Cleveland Indians - each got three games.\n\n            All six players have appealed against their suspensions.\n\n            Meanwhile, Reds manager David Bell received a six-game suspension, while Pirates boss Clint Hurdle got a two-game ban.</item>
        <item>Scotlands Kirsty Gilmour has been beaten in the final of the Russian Open in Vladivostock.\n\n            The 25-year-old top seed looked on course for victory after a strong win in the first game but lost out to Pai Yu Po 9-21 21-19 21-19.\n\n            The Taiwanese player, who beat Gilmour in the 2015 US Grand Prix final, was the seventh seed.\n\n            Gilmour, a three-time European silver medallist, posted on social media: «Another tough day at the office.»</item>
        <item>Nate Reinking has been appointed as the new head coach of the Great Britain mens national basketball team.\n\n            The 45-year-old is a former GB shooting guard and assistant coach and succeeds Alberto Lorenzo for the EuroBasket 2021 pre-qualifying programme next month.\n\n            American-born Reinking said: «The Great Britain national team has been a huge part of my life and career not only as a player but as a coach.»\n\n            Reinking leaves his role as head coach of NBA G-League side Canton Charge.</item>
        <item>Wales is to host the 2019 World Bowls Atlantic Championships in May.\n\n            Cyprus and South Africa have previously hosted the event, which will bring leading men and women from 20 nations to Cardiff and the Vale of Glamorgan.\n\n            The clubs hosting games are Penylan, Dinas Powys, Barry and Penarth (Windsor) from 10-23 May.\n\n            Welsh Bowling Association secretary Terry Hopkins hopes the event will help Wales «to put forward a bid for future World Bowls Championships».\n\n        </item>
        <item>Italian Elia Viviani timed his sprint finish to perfection to capture the RideLondon-Surrey Classic at The Mall.\n\n            Runner-up last year, Deceuninck-Quick-Step rider Viviani stayed clear of a late crash in the chasing pack to clock three hours 46 minutes 16 seconds over the 169km course.\n\n            Irish national champion Sam Bennett finished second, with Vivianis Danish team-mate Michael Morkov was third.\n\n            Britains Alex Dowsett claimed the King of the Mountains title.\n\n            Dowsett was part of a three-man breakaway at the head of the field for much of the race - which featured five climbs of Box Hill - before dropping out 50km from the finish, but won the King of the Mountains with 32 points, one ahead of Stan Dewulf.</item>
        <item>Japans Hinako Shibuno birdied the last hole to clinch a stunning win in the Womens British Open at Woburn.\n\n            Shibuno, 20, led by two shots overnight but was soon caught by USAs Lizette Salas in a thrilling final round.\n\n            Salas fired the weeks lowest round - a seven-under-par 65 - but Shibuno had five birdies on the back nine to win by one shot in her first major.\n\n            Englands Charley Hull and Bronte Law slipped out of contention with rounds of four and six over respectively.</item>
        <item>Athletics governing body said «biology has to trump gender identity» after welcoming the decision to permit restrictions in testosterone levels of female runners.\n\n            Double Olympic champion Caster Semenya twice appealed against the new International Association of Athletics Federations rule that prevents her from running the 800m without medication.\n\n            A Swiss court suspended the ruling which has now been lifted, though Semenya said she will not defend her 800m world title this year.\n\n            The IAAF said competitors now have «parity and clarity» before the championships in Doha, which begin on 28 September.</item>
        <item>Manchester United have signed England centre-back Harry Maguire from Leicester City for £80m - a world record fee for a defender.\n\n            The 26-year-old has agreed a six-year contract at Old Trafford, with the option of a further year.\n\n            The fee for Maguire eclipses the £75m Liverpool paid Southampton for Virgil van Dijk in January 2018.\n\n            «When Manchester United come knocking on your door, it is an incredible opportunity,» said Maguire.\n\n            He becomes United manager Ole Gunnar Solskjaers third summer signing, after right-back Aaron Wan-Bissaka arrived from Crystal Palace for £50m and winger Daniel James joined from Swansea for £15m.</item>
        <item>Six-time Olympic champion Ryan Lochte won the 200m individual medley at the US National Championships as his return from a 14-month doping ban continued.\n\n            Lochte, 35, clocked one minute 57.76 seconds in the final to beat 19-year-old Shaine Casas into second with Jake Foster, 18, in third.\n\n            It was a 27th national title for Lochte, who is hoping to compete at his fifth Olympics in Tokyo next year.\n\n            «This was a lot easier 10 years ago,» he said after the race in California.\n\n            Lochte, a 12-time Olympic medallist, was banned for 10 months in 2016 after falsely claiming he was robbed at gunpoint during the Rio Olympics.</item>
        <item>Paul Drinkhall became the first English player to win two World Tour titles as he came from 2-0 down to capture the Serbia Open in Belgrade.\n\n            Drinkhall, 29, beat top seed Stefan Fegerl of Austria in the last 16 and saw off Andrea Landrieu of France 4-3 in the semi-finals, having trailed 3-2.\n\n            In the final against unseeded Abdel-Kader Salifou, the 12th seed held game points in the second but lost it 12-10.\n\n            He saved a game point to take the third 12-10 and won the next three for 4-2.</item>
        <item>Australian Nick Kyrgios said he had experienced «one of the greatest weeks» of his life as he won his sixth ATP title at the Washington Open.\n\n            Kyrgios, 24, overcame back spasms and a poor opening set to beat third seed Daniil Medvedev 7-6 (8-6) 7-6 (7-4).\n\n            He hit 18 aces and never faced a break point against the Russian, and will now move back into the worlds top 30.\n\n            «This is probably my best memory of a final. I left it all on the court,» said Kyrgios.\n\n            «Ive made massive strides. This whole week has been amazing. Its a week I wont forget.»\n\n            Medvedev, the world number 10, led 5-2 in the first-set tie-break, but Kyrgios saved a set point and then won it in 41 minutes.</item>
    </string-array>\n\n</resources>
