<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.materialme.DetailActivity"
        >

    <ImageView
            android:id="@+id/detail_sports_image"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sport_s_image_content_description"
            />

    <TextView
            android:id="@+id/detail_title"
            android:text="@string/title_placeholder"
            android:layout_alignBottom="@id/detail_sports_image"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"
            android:padding="16dp"
            />
    <TextView
            android:id="@+id/detail_newsTitle"
            android:text="@string/news_placeholder"
            android:layout_below="@id/detail_sports_image"
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:padding="16dp"
            />
    <TextView
            android:id="@+id/detail_text"
            android:text="@string/lorem_ipsum"
            android:layout_below="@id/detail_newsTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="16dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

</RelativeLayout>
</ScrollView>